feat(dotfiles): switch to dracule theme on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,10 +30,14 @@ set-option -g set-clipboard on
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @yank_action 'copy-pipe'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
+set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-show-left-icon session
 
+set -g @dracula-show-powerline false
 run '~/.tmux/plugins/tpm/tpm'
+
