--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ setw -g mode-keys vi
 set -g base-index 1
 setw -g pane-base-index 1
 
-set-option -g status-interval 5
+set-option -g status-interval 1
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 set-option -g renumber-windows on
@@ -35,9 +35,10 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @yank_action 'copy-pipe'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
+# dracula
 set -g @dracula-plugins "cpu-usage ram-usage"
 set -g @dracula-show-left-icon session
-
 set -g @dracula-show-powerline false
+
 run '~/.tmux/plugins/tpm/tpm'
 
