--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -4,19 +4,41 @@
 add_newline = true
 command_timeout = 15
 
+[aws]
+style = "bold #ffb86c"
+
 [character]
+error_symbol = "[λ](bold #ff5555)"
+success_symbol = "[λ](bold #50fa7b)"
 vicmd_symbol = "[V](bold green)"
+
+[cmd_duration]
+style = "bold #f1fa8c"
+
+[directory]
+style = "bold #50fa7b"
+truncation_length = 8
+truncation_symbol = "../"
+truncate_to_repo  = false
+
+[git_branch]
+style = "bold #ff79c6"
+
+[git_status]
+style = "bold #ff5555"
+
+[hostname]
+style = "bold #bd93f9"
+
+[username]
+format = "[$user]($style) on "
+style_user = "bold #8be9fd"
 
 [package]
 disabled = true
 
 [python]
 disabled = true
-
-[directory]
-truncation_length = 8
-truncation_symbol = "../"
-truncate_to_repo  = false
 
 [time]
 time_format = '%T'
