fix(dotfiles): add color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 # dracula
 set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-ram-usage-colors "pink dark_gray"
 set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline false
 
