--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 enable_audio_bell no
 
-font_family      Fire Code
+font_family      Fira Code
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
