fix(dotfiles): fix colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,9 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -sg terminal-overrides ",*:RGB"
+
 set-option -g focus-events on
 set -g set-titles on
 set -gq utf8 on
