--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 set -g default-terminal "screen-256color"
-set -sg terminal-overrides ",*:RGB"
+set -ga terminal-overrides ",*-256color:RGB"
 
 set-option -g focus-events on
 set -g set-titles on
